# Dalamud.GoodFriend

./: .gitignore  README.md  flake.nix
.github/workflows/: crowdin-download.yml  crowdin-upload.yml  release.yml  test-api.yml  test-client.yml  test-docker.yml  test-plugin.yml
src/Api/: Cargo.toml  Dockerfile
src/Api/src/: main.rs
src/Api/src/extractors/: authenticated_user.rs  client_key.rs  content_id.rs
src/Api/src/routes/: event.rs  mod.rs  stream.rs
src/Api/src/routes/announcements/: mod.rs  send.rs
src/Api/src/routes/events/: mod.rs  stream.rs  update_loginstate.rs
src/Client/: GoodFriend.Client.csproj  packages.lock.json
src/Client/Http/: SseClient.cs  StreamClient.cs
src/Client/Http/Enums/: Announcement.cs
src/Client/Http/Requests/: GetPlayerEventStreamRequest.cs  GlobalRequestData.cs  PlayerEventStreamRequest.cs  PlayerLoginEventRequest.cs  PostAnnouncementRequest.cs  PostPlayerLoginStateRequest.cs  RequestConstants.cs
src/Client/Http/Responses/: AnnouncementStreamUpdate.cs  PlayerEventStreamUpdate.cs
src/Plugin/: GoodFriend.Plugin.csproj  packages.lock.json
src/Plugin/Base/: DalamudInjections.cs  Services.cs
src/Plugin/Configuration/: PluginConfiguration.cs
src/Plugin/ModuleSystem/Modules/: AnnouncementModule.cs  CurrentFriendsOnlineModule.cs  LoginStateModule.cs  PlayerEventStreamModule.cs
src/Plugin/UserInterface/Components/: ButtonRowComponent.cs
src/Plugin/UserInterface/Windows/MainWindow/: MainWindow.cs
src/Plugin/UserInterface/Windows/MainWindow/Screens/: DebugScreen.cs  SettingsScreen.cs
src/Plugin/Utility/: CryptoUtil.cs  FriendUtil.cs  NotificationUtil.cs
