[package]
name = "goodfriend-api"
version = "3.11.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.8.8", features = ["http2"] }
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
] }
tower-http = { version = "0.6.8", features = [
    "catch-panic",
    "normalize-path",
    "trace",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
axum-msgpack = "0.5.0"
rmp-serde = "1.3.1"
serde_bytes = "0.11.19"
